src/objects/Product2/fields/Additional_PLM_comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_PLM_comments__c</fullName>
    <label>Additional PLM comments on EOL</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>