src/objects/Product2/fields/Base_Product_Marketing_P_N__c.field-meta.xml
<CustomField>
    <fullName>Base_Product_Marketing_P_N__c</fullName>
    <label>Base Product Marketing P/N</label>
    <length>240</length>
    <type>Text</type>
</CustomField>