src/objects/Product2/fields/BU_Code__c.field-meta.xml
<CustomField>
    <fullName>BU_Code__c</fullName>
    <label>BU Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>