src/objects/Product2/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>Data Networking</fullName>
            </value>
            <value>
                <fullName>Optical Interconnect</fullName>
            </value>
            <value>
                <fullName>3D Sensing</fullName>
            </value>
            <value>
                <fullName>WSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>