src/objects/Product2/fields/Child_Product_Check__c.field-meta.xml
<CustomField>
    <fullName>Child_Product_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Product Check</label>
    <type>Checkbox</type>
</CustomField>