src/objects/Product2/fields/Commodity_Code__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Code__c</fullName>
    <label>Commodity Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>