src/objects/Product2/fields/Current_User_Is_PLM__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Is_PLM__c</fullName>
    <description>Field used for reporting to allow filtering to show PLM&apos;s only their own products.</description>
    <formula>if($User.Id = PLM__c  , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Is PLM</label>
    <type>Checkbox</type>
</CustomField>