src/objects/Product2/fields/Dallas_Make__c.field-meta.xml
<CustomField>
    <fullName>Dallas_Make__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is checked the standard cost is a Make in Glovia.  Glovia will populate this field.</inlineHelpText>
    <label>Dallas Make</label>
    <type>Checkbox</type>
</CustomField>