src/objects/Product2/fields/Data_Rate__c.field-meta.xml
<CustomField>
    <fullName>Data_Rate__c</fullName>
    <label>Data Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 G</fullName>
            </value>
            <value>
                <fullName>10 GE</fullName>
            </value>
            <value>
                <fullName>10 GFC</fullName>
            </value>
            <value>
                <fullName>100 GE</fullName>
            </value>
            <value>
                <fullName>100 MB</fullName>
            </value>
            <value>
                <fullName>16 G</fullName>
            </value>
            <value>
                <fullName>2 G</fullName>
            </value>
            <value>
                <fullName>200 GE</fullName>
            </value>
            <value>
                <fullName>25 G</fullName>
            </value>
            <value>
                <fullName>32 G</fullName>
            </value>
            <value>
                <fullName>4 G</fullName>
            </value>
            <value>
                <fullName>40 GE</fullName>
            </value>
            <value>
                <fullName>400 GE</fullName>
            </value>
            <value>
                <fullName>40GIF</fullName>
            </value>
            <value>
                <fullName>50 GE</fullName>
            </value>
            <value>
                <fullName>56GIF</fullName>
            </value>
            <value>
                <fullName>64 G</fullName>
            </value>
            <value>
                <fullName>8 G</fullName>
            </value>
            <value>
                <fullName>OC-12</fullName>
            </value>
            <value>
                <fullName>OC-192</fullName>
            </value>
            <value>
                <fullName>OC-3</fullName>
            </value>
            <value>
                <fullName>OC-48</fullName>
            </value>
            <value>
                <fullName>OC-768</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>