src/objects/Product2/fields/Detector__c.field-meta.xml
<CustomField>
    <fullName>Detector__c</fullName>
    <label>Detector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APD</fullName>
            </value>
            <value>
                <fullName>PIN</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>