src/objects/Product2/fields/Duplicate_Product__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product with Duplicate Marketing P/N with Commodity Code 7000</description>
    <inlineHelpText>Product with Duplicate Marketing P/N with Commodity Code 7000</inlineHelpText>
    <label>Duplicate Product</label>
    <type>Checkbox</type>
</CustomField>