src/objects/Product2/fields/ECCN_Number__c.field-meta.xml
<CustomField>
    <fullName>ECCN_Number__c</fullName>
    <label>ECCN Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>