src/objects/Product2/fields/EOL_Notification_Number__c.field-meta.xml
<CustomField>
    <fullName>EOL_Notification_Number__c</fullName>
    <label>EOL Notification Number</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>