src/objects/Product2/fields/Export_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Export_Control_Number__c</fullName>
    <label>Export Control Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>