src/objects/Product2/fields/Export_Controlled_Part__c.field-meta.xml
<CustomField>
    <fullName>Export_Controlled_Part__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Export Controlled Part</label>
    <type>Checkbox</type>
</CustomField>