src/objects/Product2/fields/Form_Factor__c.field-meta.xml
<CustomField>
    <fullName>Form_Factor__c</fullName>
    <label>Form Factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>168 PIN</fullName>
            </value>
            <value>
                <fullName>17PIN</fullName>
            </value>
            <value>
                <fullName>1RU CHASSIS</fullName>
            </value>
            <value>
                <fullName>1X20 PIN</fullName>
            </value>
            <value>
                <fullName>28PIN</fullName>
            </value>
            <value>
                <fullName>2RU CHASSIS</fullName>
            </value>
            <value>
                <fullName>2X10 PIN</fullName>
            </value>
            <value>
                <fullName>2X5 PIN</fullName>
            </value>
            <value>
                <fullName>2X6 PIN</fullName>
            </value>
            <value>
                <fullName>2X7 PIN</fullName>
            </value>
            <value>
                <fullName>300 PIN</fullName>
            </value>
            <value>
                <fullName>300PIN-LFF</fullName>
            </value>
            <value>
                <fullName>300PIN-SFF</fullName>
            </value>
            <value>
                <fullName>3RU CHASSIS</fullName>
            </value>
            <value>
                <fullName>41PN CNSMR</fullName>
            </value>
            <value>
                <fullName>9PIN</fullName>
            </value>
            <value>
                <fullName>AMPLIFIER MODULE</fullName>
            </value>
            <value>
                <fullName>BOA</fullName>
            </value>
            <value>
                <fullName>CDFP</fullName>
            </value>
            <value>
                <fullName>CFP</fullName>
            </value>
            <value>
                <fullName>CFP2</fullName>
            </value>
            <value>
                <fullName>CFP4</fullName>
            </value>
            <value>
                <fullName>CFP8</fullName>
            </value>
            <value>
                <fullName>Chip</fullName>
            </value>
            <value>
                <fullName>Chip-on-Carrier</fullName>
            </value>
            <value>
                <fullName>CUSTOMENCL</fullName>
            </value>
            <value>
                <fullName>CUSTOM LINECARD</fullName>
            </value>
            <value>
                <fullName>CXP</fullName>
            </value>
            <value>
                <fullName>DIE</fullName>
            </value>
            <value>
                <fullName>ENDURANCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>