src/objects/Product2/fields/Generic_Parent__c.field-meta.xml
<CustomField>
    <fullName>Generic_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Generic Parent</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <errorMessage>Product of Type Generic or Generic Parent should be selected and it should be available</errorMessage>
        <filterItems>
            <field>Product2.Type__c</field>
            <operation>equals</operation>
            <value>Generic</value>
        </filterItems>
        <filterItems>
            <field>Product2.Type__c</field>
            <operation>equals</operation>
            <value>Generic Parent</value>
        </filterItems>
        <filterItems>
            <field>Product2.Available__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>