src/objects/Product2/fields/Hierarchy_Division__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Division__c</fullName>
    <label>Hierarchy Division</label>
    <length>100</length>
    <type>Text</type>
</CustomField>