src/objects/Product2/fields/HTS_Number__c.field-meta.xml
<CustomField>
    <fullName>HTS_Number__c</fullName>
    <label>HTS Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>