src/objects/Product2/fields/Is_Base_P_N__c.field-meta.xml
<CustomField>
    <fullName>Is_Base_P_N__c</fullName>
    <formula>IF(  ISBLANK(Base_Product_Marketing_P_N__c) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Base P/N?</label>
    <type>Checkbox</type>
</CustomField>