src/objects/Product2/fields/IsPLMUser__c.field-meta.xml
<CustomField>
    <fullName>IsPLMUser__c</fullName>
    <formula>IF( UPPER($User.Email) ==UPPER( Product_PLM_Email__c ),True,False)</formula>
    <label>IsPLMUser</label>
    <type>Checkbox</type>
</CustomField>