src/objects/Product2/fields/Legacy_Part_No__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Part_No__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Legacy Part No.</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>