src/objects/Product2/fields/Mkt_Application__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Application__c</fullName>
    <label>Mkt Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCESS</fullName>
            </value>
            <value>
                <fullName>ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>AUTOMOTIVE</fullName>
            </value>
            <value>
                <fullName>CATV</fullName>
            </value>
            <value>
                <fullName>CONSUMER</fullName>
            </value>
            <value>
                <fullName>INDUSTRIAL</fullName>
            </value>
            <value>
                <fullName>LAN</fullName>
            </value>
            <value>
                <fullName>LAN-METRO</fullName>
            </value>
            <value>
                <fullName>MILITARY</fullName>
            </value>
            <value>
                <fullName>SAN</fullName>
            </value>
            <value>
                <fullName>SAN-METRO</fullName>
            </value>
            <value>
                <fullName>TELECOM</fullName>
            </value>
            <value>
                <fullName>WIRELESS ONLY</fullName>
            </value>
            <value>
                <fullName>METROSWL</fullName>
            </value>
            <value>
                <fullName>NT LAN/SAN</fullName>
            </value>
            <value>
                <fullName>LAN/SAN</fullName>
            </value>
            <value>
                <fullName>METROMWL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>