src/objects/Product2/fields/New_Until_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Until_Date__c</fullName>
    <description>Part number is NEW until the target date is reached, then it becomes Legacy</description>
    <label>New Until Date</label>
    <type>Date</type>
</CustomField>