src/objects/Product2/fields/Non_Released_product__c.field-meta.xml
<CustomField>
    <fullName>Non_Released_product__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will be checked if the product is not RTP from the rev level that is submitted by Glovia.</description>
    <inlineHelpText>Advises if the product is RTP based upon the rev level that is in Glovia.  Defaults checked until rev level is changed to a alpha rev level.</inlineHelpText>
    <label>Non-Released product</label>
    <type>Checkbox</type>
</CustomField>