src/objects/Product2/fields/Order_information_EK_Text__c.field-meta.xml
<CustomField>
    <fullName>Order_information_EK_Text__c</fullName>
    <label>Order information (EK Text)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>