src/objects/Product2/fields/Part_Type__c.field-meta.xml
<CustomField>
    <fullName>Part_Type__c</fullName>
    <description>Part type information pulled from Pointman via integration.</description>
    <label>Part Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>